--- a/package.json
+++ b/package.json
@@ -1,7 +1,20 @@
 {
+  "name": "michaels-portfolio",
+  "private": true,
+  "workspaces": [
+    "frontend"
+  ],
+  "scripts": {
+    "build": "npm run build -w frontend",
+    "dev": "npm run dev -w frontend",
+    "lint": "npm run lint -w frontend"
+  },
   "dependencies": {
     "gray-matter": "^4.0.3",
     "marked": "^16.4.0",
     "react-router-dom": "^7.9.4"
+  },
+  "engines": {
+    "node": ">=18.18.0"
   }
 }
